feat: show doc owner
