# shared/ts-types/src/index.ts
@@ -7,6 +7,7 @@ export interface HealthResponse {
 
 export interface UserProfile {
   userId: string;
+  userName: string;
   email: string;
   roles: string[];
 }
